--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.MealerApp"
         tools:targetApi="31">
         <activity
+            android:name=".CookHome"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".SubmitComplaint"
             android:exported="false">
             <meta-data
@@ -41,7 +48,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ClientPage"
+            android:name=".ClientHome"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
